// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders a Modal with Header and Footer 1`] = `
.c0.c0.c0.c0.c0 {
  position: fixed;
  z-index: 1000;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  max-height: 80vh;
  width: calc(100vw - 48px);
  min-width: 320px;
  max-width: 400px;
  top: 50%;
  left: 50%;
  background-color: hsla(0,0%,100%,1);
  border-radius: 8px;
}

.c4.c4.c4.c4.c4 {
  padding-right: 16px;
  padding-left: 16px;
  margin-bottom: 16px;
  margin-top: 16px;
  touch-action: none;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 16px;
  margin-right: auto;
}

.c7.c7.c7.c7.c7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c10.c10.c10.c10.c10 {
  margin-left: 8px;
}

.c11.c11.c11.c11.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 28px;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c13.c13.c13.c13.c13 {
  min-height: 20px;
  background-color: hsla(150,100%,32%,0.09);
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 8px;
  padding-left: 8px;
}

.c23.c23.c23.c23.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c24.c24.c24.c24.c24 {
  width: 100%;
}

.c25.c25.c25.c25.c25 {
  border-bottom-color: hsla(211,20%,52%,0.18);
  border-bottom-style: solid;
}

.c27.c27.c27.c27.c27 {
  overflow-x: hidden;
  overflow-y: auto;
  padding: 20px;
}

.c29.c29.c29.c29.c29 {
  padding: 16px;
}

.c32.c32.c32.c32.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c18.c18.c18.c18.c18 {
  margin-right: 16px;
}

.c19.c19.c19.c19.c19 {
  text-align: left;
  height: 20px;
  background-color: hsla(25,90%,48%,0.09);
}

.c26.c26.c26.c26.c26 {
  border-width: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c9.c9.c9.c9.c9 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  word-break: break-word;
  margin-top: 1px;
}

.c16.c16.c16.c16.c16 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c17.c17.c17.c17.c17 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c28.c28.c28.c28.c28 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c34.c34.c34.c34.c34 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c21.c21.c21.c21.c21 {
  color: hsla(25,85%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c22.c22.c22.c22.c22 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c22.c22.c22.c22.c22:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c22.c22.c22.c22.c22:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c22.c22.c22.c22.c22:active {
  color: hsla(211,26%,34%,1);
}

.c1.c1.c1.c1.c1 {
  -webkit-transition-duration: 280ms;
  transition-duration: 280ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
  opacity: 0;
  background-color: hsla(0,0%,0%,0.56);
}

.c3.c3.c3.c3.c3 {
  box-shadow: 0px 16px 48px -4px hsla(217,56%,17%,0.18);
  position: fixed;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  opacity: 0;
  -webkit-animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
  animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
}

.c20.c20.c20.c20.c20 {
  background-color: hsla(25,90%,48%,0.09);
  border-radius: 9999px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14.c14.c14.c14.c14 {
  background-color: hsla(150,100%,32%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c30.c30.c30.c30.c30 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c30.c30.c30.c30.c30:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c30.c30.c30.c30.c30:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c30.c30.c30.c30.c30:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c30.c30.c30.c30.c30 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c31.c31.c31.c31.c31 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c33.c33.c33.c33.c33 {
  opacity: 1;
}

@media screen and (min-width:768px) {
  .c4.c4.c4.c4.c4 {
    padding-right: 20px;
    padding-left: 20px;
    margin-bottom: 20px;
    margin-top: 20px;
  }
}

@media screen and (min-width:320px) {
  .c25.c25.c25.c25.c25 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:480px) {
  .c25.c25.c25.c25.c25 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c25.c25.c25.c25.c25 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1024px) {
  .c25.c25.c25.c25.c25 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:1200px) {
  .c25.c25.c25.c25.c25 {
    border-bottom-style: solid;
  }
}

@media screen and (min-width:768px) {
  .c29.c29.c29.c29.c29 {
    padding: 20px;
  }
}

<div
  class="c0"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="c1"
    data-blade-component="modal-backdrop"
    data-floating-ui-inert=""
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="c2 c3"
    data-blade-component="modal"
    role="dialog"
    tabindex="-1"
  >
    <div
      class=""
      data-blade-component="modal-header"
    >
      <div
        class="c4"
        data-blade-component="base-box"
      >
        <div
          class="c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <div
              class="c7"
              data-blade-component="base-box"
            >
              <div
                class="c8"
                data-blade-component="base-box"
              >
                <p
                  class="c9"
                  data-blade-component="text"
                >
                  Address Details
                </p>
                <div
                  class="c10"
                  data-blade-component="base-box"
                >
                  <div
                    class="c11"
                    data-blade-component="box"
                  >
                    <div
                      class="c12"
                      data-blade-component="counter"
                    >
                      <div
                        class="c13 c14"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c15"
                          data-blade-component="base-box"
                        >
                          <p
                            class="c16"
                            data-blade-component="text"
                          >
                            2
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="c17"
                data-blade-component="text"
              >
                Saving addresses will improve your checkout experience
              </p>
            </div>
          </div>
          <div
            class="c18"
            data-blade-component="base-box"
          >
            <div
              class="c11"
              data-blade-component="box"
            >
              <div
                class="c12"
                data-blade-component="badge"
              >
                <div
                  class="c19 c20"
                  data-blade-component="base-box"
                >
                  <div
                    class="c15"
                    data-blade-component="base-box"
                  >
                    <p
                      class="c21"
                      data-blade-component="text"
                    >
                      Action Needed
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c11"
            data-blade-component="box"
          >
            <button
              aria-label="Close"
              class="c22"
              data-blade-component="icon-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                  data-blade-component="svg-path"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="c23"
          data-blade-component="base-box"
        >
          <div
            class="c24"
            data-blade-component="box"
          />
        </div>
      </div>
      <div
        class="c25 c26"
        data-blade-component="divider"
        role="separator"
      />
    </div>
    <div
      class="c27"
      data-blade-component="modal-body"
    >
      <p
        class="c28"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
    <div
      class=""
      data-blade-component="box"
    >
      <div
        class="c25 c26"
        data-blade-component="divider"
        role="separator"
      />
      <div
        class="c29"
        data-blade-component="modal-footer"
      >
        <button
          class="c30"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c31"
            data-blade-component="base-box"
          >
            <div
              class="c32 c33"
              data-blade-component="base-box"
            >
              <div
                class="c34"
                data-blade-component="base-text"
              >
                Save
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders a basic Modal 1`] = `
.c0.c0.c0.c0.c0 {
  position: fixed;
  z-index: 1000;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  max-height: 80vh;
  width: calc(100vw - 48px);
  min-width: 320px;
  max-width: 400px;
  top: 50%;
  left: 50%;
  background-color: hsla(0,0%,100%,1);
  border-radius: 8px;
}

.c4.c4.c4.c4.c4 {
  overflow-x: hidden;
  overflow-y: auto;
  padding: 20px;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  -webkit-transition-duration: 280ms;
  transition-duration: 280ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
  opacity: 0;
  background-color: hsla(0,0%,0%,0.56);
}

.c3.c3.c3.c3.c3 {
  box-shadow: 0px 16px 48px -4px hsla(217,56%,17%,0.18);
  position: fixed;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  opacity: 0;
  -webkit-animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
  animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
}

<div
  class="c0"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="c1"
    data-blade-component="modal-backdrop"
    data-floating-ui-inert=""
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="c2 c3"
    data-blade-component="modal"
    role="dialog"
    tabindex="0"
  >
    <div
      class="c4"
      data-blade-component="modal-body"
    >
      <p
        class="c5"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal renders a basic Modal of large size 1`] = `
.c0.c0.c0.c0.c0 {
  position: fixed;
  z-index: 1000;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  max-height: 80vh;
  width: calc(100vw - 48px);
  min-width: 320px;
  max-width: 1024px;
  top: 50%;
  left: 50%;
  background-color: hsla(0,0%,100%,1);
  border-radius: 8px;
}

.c4.c4.c4.c4.c4 {
  overflow-x: hidden;
  overflow-y: auto;
  padding: 20px;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  -webkit-transition-duration: 280ms;
  transition-duration: 280ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
  opacity: 0;
  background-color: hsla(0,0%,0%,0.56);
}

.c3.c3.c3.c3.c3 {
  box-shadow: 0px 16px 48px -4px hsla(217,56%,17%,0.18);
  position: fixed;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  opacity: 0;
  -webkit-animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
  animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
}

<div
  class="c0"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="c1"
    data-blade-component="modal-backdrop"
    data-floating-ui-inert=""
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="c2 c3"
    data-blade-component="modal"
    role="dialog"
    tabindex="0"
  >
    <div
      class="c4"
      data-blade-component="modal-body"
    >
      <p
        class="c5"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal renders a basic Modal of medium size 1`] = `
.c0.c0.c0.c0.c0 {
  position: fixed;
  z-index: 1000;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  max-height: 80vh;
  width: calc(100vw - 48px);
  min-width: 320px;
  max-width: 760px;
  top: 50%;
  left: 50%;
  background-color: hsla(0,0%,100%,1);
  border-radius: 8px;
}

.c4.c4.c4.c4.c4 {
  overflow-x: hidden;
  overflow-y: auto;
  padding: 20px;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  -webkit-transition-duration: 280ms;
  transition-duration: 280ms;
  -webkit-transition-timing-function: cubic-bezier(0.17,0,1,1);
  transition-timing-function: cubic-bezier(0.17,0,1,1);
  -webkit-transition-property: opacity;
  transition-property: opacity;
  opacity: 0;
  background-color: hsla(0,0%,0%,0.56);
}

.c3.c3.c3.c3.c3 {
  box-shadow: 0px 16px 48px -4px hsla(217,56%,17%,0.18);
  position: fixed;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  opacity: 0;
  -webkit-animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
  animation: hWDQRX-450290765 280ms cubic-bezier(0.17,0,1,1);
}

<div
  class="c0"
  data-blade-component="box"
  data-testid="modal-wrapper"
>
  <div
    aria-hidden="true"
    class="c1"
    data-blade-component="modal-backdrop"
    data-floating-ui-inert=""
    data-testid="modal-backdrop"
    style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  />
  <div
    aria-label="Test Modal"
    aria-modal="true"
    class="c2 c3"
    data-blade-component="modal"
    role="dialog"
    tabindex="0"
  >
    <div
      class="c4"
      data-blade-component="modal-body"
    >
      <p
        class="c5"
        data-blade-component="text"
      >
        Test Content
      </p>
    </div>
  </div>
</div>
`;
